--- a/hatetris.html
+++ b/hatetris.html
@@ -610,6 +610,7 @@
 
 				// user inputs replay string
         if(!string){
+          alert("This wasn't supposed to happen!");
   				var string = prompt() || ""; // change for IE
         }
 
@@ -763,25 +764,28 @@
       
       function randomGame(){
         var returnString = '';
-        var game = new Array();
+        var hexChart = new Array();
         for(var i=0;i<10;i++){
-          game[i] = i;
+          hexChart[i] = i;
         }
-        game[10] = 'A';
-        game[11] = 'B';
-        game[12] = 'C';
-        game[13] = 'D';
-        game[14] = 'E';
-        game[15] = 'F';
-        numberChars = Math.floor(Math.random()*1000);
+//        hexChart[10] = 'A';
+        hexChart[10] = 'B';
+        hexChart[11] = 'C';
+        hexChart[12] = 'D';
+        hexChart[13] = 'E';
+        hexChart[14] = 'F';
+        //adding a plus 1 to make sure there's never an empty genome
+        numberChars = Math.floor(Math.random()*1000)+1;
+
         for(var i=0;i<numberChars;i++){
-          //Make A's 10% of the time.
-          var a = Math.floor(Math.random()*10);
-          if (a == 1){
+          //Make extra A's
+          var a = Math.floor(Math.random()*100);
+         
+          if (a <= parseInt(document.getElementById('aPercent').value)){
             returnString+='A';
           }
           else{
-            returnString += game[Math.floor(Math.random()*16)];
+            returnString += hexChart[Math.floor(Math.random()*15)];
           }
         }
         return spaceEvery4(returnString);
@@ -791,8 +795,9 @@
         startReplay(game); 
         return document.getElementById('score').innerHTML
       }
-      function twoGames(){
-        //startReplay();
+      function evolve(){
+        //clear out the existing text in our table
+        document.getElementById('fitHistory').innerHTML = "";
         var population = Array();
         function critter(fitness,genome){
           this.fitness = fitness;
@@ -808,10 +813,12 @@
         //cheat, and seed two awesome plays
         //population[population.length++] = new critter(0,'032A AAAA AAAA 8C00 AAAA AA8C AAAA AAAA AB00 AAAA AB22 AAAA AABA AAAA AAA8 0002 EAAA A8C0 AAAA B0AA AAAA B000 16AA AAA7 2AAA AAAA EAAA AAA7 6AAA AAAA AD6A AAAA AAD5 556A AAAA AA95 56AA AAAA AA6A AAAA AA55 6AAA AAAA 8AAA AAA9 4AAA AAAA 9556 AAAA AAA0 2AAA AAAA AA8A A6AA AAAA A556 AAAA AA00 02AA AAA0 00AA AAA2 AAAA 2AAA 82A6 AAAA A2AA 62AA A56A AAA2 D6AA AA95 76AA AA80 0AAA AAA8 02AA A802 AAA8 00AA ACAA AAEA AAD6 AAAA B556 AAAA 556A AAA6 AAAB D555 6AAA 8AAA A02A AAD5 AAAB 6AAB 555A AB56 AAE2 AA00 F7AA AC2A A83A A7AA B5AA C000 AAA5 A82A B000 A8');
         //population[population.length++] = new critter(0,'56AA AAAA AA9A AAAA AAAA 8AAA AAAA AA00 AAAA AAAA ACAA AA8A AAB2 AAAA AAA5 6AAA AAAA 9AAA AAAA AEAA AAAA 9F5A AAAA ABD6 AAAA AAD5 6AAA AAAB 00AA AAAA AEAA AAAA FD6A AAAA BD56 AAAA AF5A AAAA FEAA AAB5 5AAA ABC2 AAAA 9BF0 0AAA AAA6 BBF0 0AAA AAAB AC02 AAAA AAEA AAAB 6AAA AB55 AAAA B56A AAAB 5AAA AA80 AAAA AA82 AAAA AB2A AAAC 02AA AAAB F6AA AAFE AAA5 6AAA AF56 AAAD 56AA BF55 AABC 2AAA 6FC0 2AAA A6BB F00A AAAA EB00 AAAA AE5A AAEA AADA AAA0 2AAA A82A AAAC AAAC 02AA AAD5 5AAA B5C0 AAB5 6AA9 AAAF 6ABD 56AB F00A AA6B BF00 AAAB A5AA B00A AAB2 AA5A A96A B55A A80A AA80 2AAA C2AA B0AA C02A AC02 A9C2 A9E9 76A6 AAEA');
-        population[population.length++] = new critter(0,'AAAB 00AA AAAA AB0A AAAA AAAA AAAE AAAA AD6A AAAA AAC0 0AAA AAAA C02A AAAA AAB2 28AA AAAC 2AAA AAAA E2AA AAAB 6AAA A8AA 97A5 6AAA AAAA AAEA AAAE AABA AABA ABAA');
-        popSize++;
+        if(document.options.one.checked){
+          population[population.length++] = new critter(0,'AAAB 00AA AAAA AB0A AAAA AAAA AAAE AAAA AD6A AAAA AAC0 0AAA AAAA C02A AAAA AAB2 28AA AAAC 2AAA AAAA E2AA AAAB 6AAA A8AA 97A5 6AAA AAAA AAEA AAAE AABA AABA ABAA');
+          popSize++;
+        }
         //popSize+=2;
-        generationLimit =100;
+        generationLimit =parseInt(document.getElementById('genSize').value);
         var avgFit;
         for (var j=0;j<generationLimit;j++){
           avgFit = 0;
@@ -820,6 +827,7 @@
             avgFit+=population[i].fitness;
           }
           population.sort(sortByFitness);
+          //TODO for when fitness is 0, add a fitness value for length of genome? under the argument that a long genome is more likely to fill everyting in?
           document.getElementById('fitHistory').innerHTML += "<tr><td>" + j + "&nbsp;&nbsp;</td><td>" +population[0].fitness + "&nbsp;&nbsp;</td><td>"+ avgFit/popSize + "&nbsp;&nbsp;</td><td>" + population[0].genome + "</td></tr>";
           //fitness evaluated, rearrange individuals
           //copy over the best by simply adding the offset in the next loop
@@ -868,11 +876,17 @@
 			</table>
 		</div>
 		<div style="margin: 0 50px 50px 0">
-
-			<p><a href="http://qntm.org/hatetris">You're playing HATETRIS by Sam Hughes</a></p>
-			<p><button type="button" onclick="startGame(0);">start new game</button></p>
-			<p><button type="button" onclick="startReplay();">show a replay</button></p>
-      <p><button type="button" onClick="twoGames();">show a game</button></p>
+      <p>Some tips:</p>
+      <p>This takes a long time to run - usually three to four minutes for just 10 generations. If you're on Firefox, you'll want to click that box that says "Do not show this warning again" when it warns you about this script taking too long.</p>
+			<p><a href="http://qntm.org/hatetris">Inspired by HATETRIS by Sam Hughes</a></p>
+      <form name="options">
+        <label>Number of Generations:<input type="text" name="genSize" id="genSize" value="20"></label><br>
+        <label>Percent of a newly randomly generated genome that is an 'A' (drop)<input type="text" name="aPercent" id="aPercent" value="10"></label><br>
+        <label>Include a One Point run in initial population?<input type="checkbox" name="one" id="one"></label>
+       </form>
+<!--			<p><button type="button" onclick="startGame(0);">start new game</button></p>
+			<p><button type="button" onclick="startReplay();">show a replay</button></p>-->
+      <p><button type="button" onClick="evolve();">Evolve</button></p>
 			<p><span id="score"></span></p>
 			<p><span id="replayOut"></span></p>
       <table id="fitHistory">
