--- a/hatetris.html
+++ b/hatetris.html
@@ -108,15 +108,19 @@
             avgFit+=population[i].fitness;
             totLen+= population[i].genome.length;
           }
-          //TODO parameterize this?
           //gives us 200 generations of trying to prune random crap out before we move on to letting it grow
           //also checking that we have any kind of fitness may or may not be important
-          if(j%1000==0 && population[0].fitness > 0)
+          numGenShrink = parseInt(document.getElementById('numGenShrink').value);
+          longToShrink = numGenShrink + 
+            parseInt(document.getElementById('longToShrink').value);
+          if(numGenShrink > 0 && longToShrink >0 && 
+              j%numGenShrink==0 && population[0].fitness > 0)
             lengthSort = true;
-          if(j%1200==0)
+          if(j%longToShrink==0)
             lengthSort = false
-          if(lengthSort)
+          if(lengthSort){
             population.sort(sortByFitnessAndGenome);
+          }
           else
             population.sort(sortByFitness);
 
@@ -291,12 +295,12 @@ TODO: Graph should highlight areas where we're searching for shorter solutions. 
 		</div>
 		<div style="margin: 10px">
       <h3 style="font-size:175%;">Hatetris Solver</h3>
-      <p>Be warned that this takes a long time to run. Expect 10k generations to take 8 hours or so on Chrome, Windows, with a 2GHz processor. After you evolve a game, copy the genome of the game to see, click on the link below, then click on "View Replay" and paste the game in the box.</p>
+      <p>Be warned that this takes a long time to run. Expect 20k generations to take 8 hours or so on Chrome, Windows, with a 2GHz processor. After you evolve a game, copy the genome of the game to see, click on the link below, then click on "View Replay" and paste the game in the box.</p>
       <p>This is probably the wrong solution, but this was more about me building things in Javascript than anything else.</p>
 			<p><a href="http://qntm.org/hatetris">Inspired by HATETRIS by Sam Hughes</a></p>
       <form name="options">
         <table>
-        <tr><td width="300em;"><fieldset>
+        <tr><td style="width:18em;"><fieldset>
           <legend>Global Options</legend>
             <label><span>Number of Generations:</span>
               <input type="text" name="genSize" id="genSize" value="20">
@@ -306,9 +310,15 @@ TODO: Graph should highlight areas where we're searching for shorter solutions. 
             </label><br>
             <label><span>Percent of a random genome that is 'A' (drop, drop)</span>
               <input type="text" name="aPercent" id="aPercent" value="20">
-            </label><br>
+            </label><br><br><br>
+            <label><span>How often it tries to shrink genome (0 for never)</span>
+              <input type="text" name="numGenShrink" id="numGenShrink" value="200">
+            </label><br><br>
+            <label><span>How long to try to shrink genome (0 for never)</span>
+              <input type="text" name="longToShrink" id="longToShrink" value="50">
+            </label></span>
           </fieldset></td>
-        <td width="300em;"><fieldset>
+        <td style="width:20em"><fieldset>
           <legend>Display Options</legend>
           <label><span>Add a row to the table how often? (In generations, 0 for none)</span><input type="text" name="rowEvery" id="rowEvery" value="1"></label><br><br><br>
           <label><span>Autoscroll?</span> <input type="checkbox" name="autoscroll" id="autoscroll"></label>
